--- a/src/views/index.html
+++ b/src/views/index.html
@@ -80,27 +80,27 @@
                                             <ul class="layui-row layui-col-space10">
                                                 <li class="layui-col-xs3">
                                                     <a  class="layadmin-backlog-body">
-                                                        <h3>累计应付</h3>
-                                                        <p><cite>{{d.CopeWith}}</cite></p>
+                                                        <h3>今日应收房租</h3>
+                                                        <p><cite>{{d.todreveive}}</cite></p>
                                                     </a>
                                                 </li>
                                                 <li class="layui-col-xs3">
                                                     <a  class="layadmin-backlog-body">
-                                                        <h3>累计待付</h3>
+                                                        <h3>今日应付房租</h3>
                                                         
-                                                        <p><cite>{{d.Paid}}</cite></p>
+                                                        <p><cite>{{d.todpay}}</cite></p>
                                                     </a>
                                                 </li>
                                                 <li class="layui-col-xs3">
                                                     <a  class="layadmin-backlog-body">
-                                                        <h3>累计应收</h3>
-                                                        <p><cite>{{d.Receivable}}</cite></p>
+                                                        <h3>逾期未收房租</h3>
+                                                        <p><cite>{{d.overreveive}}</cite></p>
                                                     </a>
                                                 </li>
                                                 <li class="layui-col-xs3">
                                                     <a  class="layadmin-backlog-body">
-                                                        <h3>累计待收</h3>
-                                                        <p><cite>{{d.Receivableed}}</cite></p>
+                                                        <h3>逾期未付房租</h3>
+                                                        <p><cite>{{d.overduepay}}</cite></p>
                                                     </a>
                                                 </li>
                                             </ul>
@@ -175,7 +175,7 @@
                                             <ul class="layui-row layui-col-space10">
                                                 <li class="layui-col-xs4">
                                                     <a  class="layadmin-backlog-body">
-                                                        <h3>预约</h3>
+                                                        <h3>客源</h3>
                                                         <p><cite>{{d.Appointment}}</cite></p>
                                                     </a>
                                                 </li>
