--- a/src/views/gongdan/baojie/index.html
+++ b/src/views/gongdan/baojie/index.html
@@ -13,33 +13,57 @@
     <div class="m-search">
         <form class="layui-form hcs-form" action="" lay-filter="search" id="guest-search-form">
              <div class="m-search-item" style="width:200px;">
-                   <input type="text" name="Content" autocomplete="off" class="layui-input" placeholder="小区名,期望地址，姓名，手机号" id="CellName">
+                   <input type="text" name="Content" autocomplete="off" class="layui-input" placeholder="房源,申请人，申请人手机，执行人" id="Content">
              </div>
             
-            <div class="m-search-item">
-                <select name="Source" lay-verify="" id="Source">                          
-                   <option value="来电">来电</option>
-                   <option value="官网" >官网</option>
-                   <option value="58" >58</option>
-                   <option value="安居客" >安居客</option>
-                   <option value="朋友介绍" >朋友介绍</option>
-                   <option value="百度租房" >百度租房</option>
+             <div class="m-search-item" style="width: 90px;">
+                <select name="RecentType" lay-verify="" id="RecentType"  lay-filter="RecentType">
+                   <option value="">房源类型</option>                           
+                   <option value="1">整租</option>
+                   <option value="2" >合租</option>
+                   <option value="3" >独栋</option>
             </select>  
+           </div>
+
+           <div class="m-search-item" style="width: 90px;">
+            <select name="ugent" lay-verify="" id="ugent"  lay-filter="ugent">
+               <option value="">紧急程度</option>                           
+               <option value="1">普通</option>
+               <option value="2" >紧急</option>
+               <option value="3" >非常紧急</option>
+            </select>  
+         </div>
+         <div class="m-search-item">
+            <label class="layui-form-label" style="width: auto;">市</label>
+            <div class="layui-input-inline" style="width: 90px;">
+                <select lay-filter="cityname" name="cityname">
+                    <option value="">请选择</option>
+                </select>
             </div>
-            <div class="m-search-item" >
-                    <label class="layui-form-label">创建时间</label>
-                    <div class="layui-input-inline" style="width: 144px;">
-                            <input type="text" name="BeginTime" autocomplete="off" class="layui-input" placeholder="开始时间" id="tBeginTime">
-                        </div>
-                        <div class="layui-input-inline" style="width: 144px;">
-                                <input type="text" name="EndTime" autocomplete="off" class="layui-input" placeholder="结束时间" id="tEndTime">
-                            </div>
-                </div>
-            <div class="m-search-item">
-                <button class="layui-btn" lay-submit="" lay-filter="search">搜索</button>
+        </div>
+        <div class="m-search-item">
+            <label class="layui-form-label" style="width: auto;">区</label>
+            <div class="layui-input-inline" style="width: 90px;">
+                <select lay-filter="areaname" name="areaname">
+                    <option value="">请选择</option>
+                </select>
             </div>
+        </div>
+        <div class="m-search-item">
+            <label class="layui-form-label" style="width: auto;">小区</label>
+            <div class="layui-input-inline" style="width: 90px;">
+                <select lay-filter="cellname" name="cellname" multiple="multiple">
+                    <option value="">请选择</option>
+                </select>
+                <input type="hidden" name="CellNames" id="cellname">
+            </div>
+        </div>
+
+         <div class="m-search-item">
+            <button class="layui-btn" lay-submit="" lay-filter="search">搜索</button>
+         </div>
             
-            <div style="clear:both;"></div>
+         <div style="clear:both;"></div>
         </form>
     </div>
    
