--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -58,7 +58,7 @@
           </a>
           <dl class="layui-nav-child">
             <dd><a lay-href="set/base/password">基本资料</a></dd>
-         
+            <dd><a lay-href="set/security/index">公司信息</a></dd>
             <dd layadmin-event="logout"><a>退出</a></dd>
             <hr>
             
