--- a/src/views/msystem/department/add.html
+++ b/src/views/msystem/department/add.html
@@ -28,7 +28,7 @@
                         </div>
                         <label class="layui-form-label">所属部门</label>
                         <div class="layui-input-inline" style="width: 200px;">
-                            <input type="text" name="parentid" lay-verify="required" autocomplete="off" class="layui-input" id="tree" lay-filter="tree">
+                            <input type="text" name="parentid"  autocomplete="off" class="layui-input" id="tree" lay-filter="tree">
                         </div>
                     </div>
                 </div>
@@ -36,7 +36,7 @@
                     <div class="layui-inline">
                         <label class="layui-form-label">部门电话</label>
                         <div class="layui-input-inline" style="width: 200px;">
-                            <input type="text" name="phone" autocomplete="off" class="layui-input" id="name">
+                            <input type="text" name="phone" autocomplete="off" class="layui-input" id="phone">
                         </div>
                         <label class="layui-form-label">所属地址</label>
                         <div class="layui-input-inline" style="width: 200px;">
@@ -63,44 +63,50 @@
             var table = layui.table;
             var setter = layui.setter;
             var url = "api/Sysuser/QueryUser";
-
             var data = { "Id": id };
             var allresult = [];
             var $ = layui.jquery,
                 form = layui.form;
-
-            doc.objectQuery('api/Sysrole/Querydepartment', {
-                Id: -1
-            }, function(data) {
-            	var list;
-                treeSelect.render({
-                    elem: '#tree',
-                    // 数据
-                    data: list,
-                    // 占位符
-                    placeholder: '修改默认提示信息',
-                    // 是否开启搜索功能：true/false，默认false
-                    search: true,
-                    // 点击回调
-                    click: function(d) {
-                        console.log(d);
-                    },
-                    // 加载完成后的回调函数
-                    success: function(d) {
-                        console.log(d);
-                        //                选中节点，根据id筛选
-                        //                treeSelect.checkNode('tree', 3);
-
-                        //                获取zTree对象，可以调用zTree方法
-                        //                var treeObj = treeSelect.zTree('tree');
-                        //                console.log(treeObj);
-
-                        //                刷新树结构
-                        //                treeSelect.refresh();
-                    }
-                });
+            treeSelect.render({
+            elem: '#tree',
+            url:setter.baseurl+'api/Sysrole/Querydepartment',
+            data:  {Id: -1},
+            headers: {"access_token": layui.data('layuiAdmin').access_token},
+            type: 'post',
+            placeholder: '请选择',
+            search: true,
+            style: {
+                folder: {
+                    enable: true
+                },
+                line: {
+                    enable: true
+                }
+            },
+            click: function(d){
+            },
+            success: function (d) {
+               treeSelect.checkNode('tree', 3);
+               var treeObj = treeSelect.zTree('tree');
+               treeSelect.refresh('tree');
+            }
             });
-        });
+            form.on('submit(save)', function (data) {
+            var saveoption={
+            url:'api/Sysrole/adddepartment',
+            data:data.field,
+            tableid:tableid,
+            callBack:function(result){
+             debugger;
+             if(result.Code==0){
+                layer.close(layerindex);
+            }
+        }
+     }
+     doc.Submit(saveoption);
+     return false;
+     });
+            });
     }
     </script>
 </body>
