--- a/src/views/msystem/department/index.html
+++ b/src/views/msystem/department/index.html
@@ -35,20 +35,32 @@
             </li>
         </ul>
     </script>
-    <div id="toolbar">
-        <div class="layui-btn-group">
-            <div id="department-button-view" style="overflow:hidden;"></div>
-          
-        </div>
+ 
+            <div class="layui-row">
+              <div class="layui-col-md2">
+                    <ul id="demo"></ul>
+              </div>
+              <div class="layui-col-md10">
+                    <div id="toolbar">
+                            <div class="layui-btn-group">
+                                <div id="department-button-view" style="overflow:hidden;"></div>
+                              
+                            </div>
+                     </div>
+                     <div class="layui-tab layui-tab-card" lay-filter="tabletab">
+                            <ul class="layui-tab-title" style="margin-bottom:0;">
+                                <li value="999" class="layui-this">所有</li>
+                            </ul>
+                            <div class="layui-tab-content" style="padding:0px;margin:0px;">
+                                <table id="department-table" lay-filter="demoEvent"></table>
+                            </div>
+                      </div>
+              </div>
     </div>
-    <div class="layui-tab layui-tab-card" lay-filter="tabletab">
-        <ul class="layui-tab-title" style="margin-bottom:0;">
-            <li value="999" class="layui-this">所有</li>
-        </ul>
-        <div class="layui-tab-content" style="padding:0px;margin:0px;">
-            <table id="department-table" lay-filter="demoEvent"></table>
-        </div>
-    </div>
+ 
+   
+
+   
   
 
 </div>
