--- a/src/views/msystem/sysuser/index.html
+++ b/src/views/msystem/sysuser/index.html
@@ -71,8 +71,11 @@
         </div>
     </div>
     <div class="layui-tab layui-tab-card" lay-filter="tabletab">
+        
         <ul class="layui-tab-title" style="margin-bottom:0;">
-            <li value="999" class="layui-this">所有</li>
+            <li value="0" class="layui-this">在职</li>
+            <li value="1" >离职</li>
+            <li value="2" >所有</li>
         </ul>
         <div class="layui-tab-content" style="padding:0px;margin:0px;">
             <table id="sysuser-table" lay-filter="demoEvent"></table>
